--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--Header-->
     <header class="header">
       <div class="container header-container">
-        <a class="logo-link link" href="/"
+        <a class="logo-link header-logo link" href="/"
           ><span class="logo-web">Web</span>Studio</a
         >
         <nav class="navigation">
@@ -186,29 +186,29 @@
               </div>
               <ul class="team-list list">
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -229,29 +229,29 @@
               </div>
               <ul class="team-list list">
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -272,29 +272,29 @@
               </div>
               <ul class="team-list list">
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -315,29 +315,29 @@
               </div>
               <ul class="team-list list">
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-item">
-                  <a class="team-link-icon link" href="">
-                    <svg class="team-social-icon">
+                  <a class="social-link-icon team-icon link" href="">
+                    <svg class="social-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -401,7 +401,7 @@
     <footer class="footer-container">
       <div class="container footer-box">
         <div class="address-container">
-          <a class="footer-logo-link link" href="WebStudio"
+          <a class="logo-link footer-logo link" href="WebStudio"
             ><span class="logo-web">Web</span>Studio</a
           >
           <address class="footer-address">
@@ -426,28 +426,28 @@
           <h3 class="social-title">присоединяйтесь</h3>
           <ul class="social-list list">
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
