--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <!--Верхняя линия-->
     <header class="header">
       <div class="container header-container">
-        <a class="logo-link link" href="/"
+        <a class="logo-link header-logo link" href="/"
           ><span class="logo-web">Web</span>Studio</a
         >
         <!--Навигация на другие страницы-->
@@ -294,7 +294,7 @@
     <footer class="footer-container">
       <div class="container footer-box">
         <div class="address-container">
-          <a class="footer-logo-link link" href="WebStudio"
+          <a class="logo-link footer-logo link" href="WebStudio"
             ><span class="logo-web">Web</span>Studio</a
           >
           <address class="footer-address">
