--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Header-->
@@ -124,7 +124,7 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="section section-team">
+      <section class="section section-about">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="section-list list">
@@ -168,7 +168,7 @@
         </div>
       </section>
       <!--Наша команда-->
-      <section class="section team-section">
+      <section class="section section-team">
         <div class="container">
           <h2 class="title">Наша команда</h2>
           <ul class="section-team-list list">
