--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Верхняя линия-->
@@ -319,34 +319,51 @@
           <h3 class="social-title">присоединяйтесь</h3>
           <ul class="social-list list">
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link-icon" href="">
+              <a class="social-link-icon footer-icon" href="">
                 <svg class="social-icon">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
+        <div class="form-box">
+          <h3 class="social-title">Подпишитесь на рассылку</h3>
+          <form class="form-box-mail">
+            <label class="footer-form-label">
+              <input
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+                class="footer-form-input"
+              />
+            </label>
+          <button class="modal-footer-btn" type="submit">Подписаться
+            <svg class="form-icon">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </footer>
